src/css/new-message.less
@import (reference) 'variables.less';

.new-message-container {
  .clearafter();
  border-radius: 3px;
  background-color: @background-differentiator;
  width: 575px;
  padding: 17px 26px;

  .new-message-container-header {
    font-size: 16px;
  }

  textarea {
    width: 100%;
    max-width: 100%;
    outline: none;
    border: none;
    border-radius: 3px;
    padding: 7px;
    margin: 16px 0;
  }

  button {
    float: right;
  }

  .add-photo {
    margin-right: 44px;
    display: inline-block;
    .button;
    opacity: .5;
  }

  .add-video {
    .button;
    opacity: .5;
  }
}

